# secure-aggregation

./: .bazelrc  BUILD  MODULE.bazel  README.md
.github/workflows/: presubmit.yml
bazel/: BUILD  rust_cxx_bridge.bzl
shell_wrapper/: BUILD  ahe.cc  ahe.h  ahe.rs  ahe_aliases.h  ahe_test.cc  ahe_test.rs  kahe.cc  kahe.h  kahe.rs  kahe_test.cc  kahe_test.rs  shell_aliases.h  shell_types.cc  shell_types.h  shell_types.rs  shell_types_test.cc  single_thread_hkdf.cc  single_thread_hkdf.h  single_thread_hkdf.rs  status.cc  status.h  status.rs  status_macros.h  status_matchers.cc  status_matchers.h  status_matchers.rs  testing_utils.h
willow/benches/: BUILD  README.md  run_shell_benchmark.rs  shell_benchmarks.rs
willow/proto/willow/: BUILD  decryptor.proto
willow/src/api/: BUILD  client.rs  common.proto  common.rs  decryptor.rs  server.rs  verifier.rs
willow/src/shell/: BUILD  ahe.rs  kahe.rs  parameters.proto  parameters.rs  parameters_generation.rs  single_thread_hkdf.rs  vahe.rs
willow/src/testing_utils/: BUILD  fake_prng.rs  shell_testing_parameters.rs  testing_utils.rs
willow/src/traits/: BUILD  ahe.rs  client.rs  common.rs  decryptor.rs  kahe.rs  prng.rs  server.rs  vahe.rs  verifier.rs  zk.rs
willow/src/willow_v1/: BUILD  client.rs  common.rs  decryptor.rs  server.rs  verifier.rs
willow/src/zk/: BUILD  linear_ip.rs  quadratic_ip.rs  rlwe_relation.rs
willow/tests/: BUILD  dummy_kahe.rs  willow_v1_shell.rs
